# KAST

./: .travis.yml  BENCHMARK.md  CMakeLists.txt  LICENSE  PERFORMANCE_TESTS.md  README.md  alfsc.cpp  app_test.sh  common.h  contributors.txt  distance.cpp  distance.h  distance_tests.h  distances.cpp  distances.h  hello_seqan.cpp  kast.cpp  kast.xml  kast_tests.cpp  pairwise.h  print.h  search.h  seq.cpp  unit_tests.cpp  utils.cpp  utils.h  utils_tests.h
example_data/: README.md  protein.fasta  seq1.fa  seq2.fa  sm1.fasta  sm2.fasta
example_data/alfsc-python/: ALFSC-contam-v002.py  ALFSC_utils_v002.py
results/: README
results/pairwise/: bc_k3  bc_k3_aa  bc_k3_raa  chebyshev_k3  d2_k3  d2s_k3  d2star_k3  dai_k3  euclid_k3  manhattan_k3  ngd_k3  test_chebyshev_k3_aa  test_chebyshev_k3_raa  test_d2_k3_aa  test_d2_k3_raa  test_d2s_k3_raa  test_d2star_k3_aa  test_dai_k3  test_dai_k3_aa  test_dai_k3_raa  test_euclid_k3_aa  test_euclid_k3_raa  test_manhattan_k3_aa  test_manhattan_k3_raa  test_ngd_k3_aa  test_ngd_k3_raa
results/search/: D2S_k3  D2S_k3_aa  D2Star_k3  D2Star_k3_raa  bc_k3  chebyshev_k3  chebyshev_k3_raa  d2_k3  d2_k3_raa  dai_k3  dai_k3_aa  dai_k3_raa  euclid_k3  euclid_k3_aa  manhattan_k3  manhattan_k3_raa  ngd_k3_aa
util/: cluster_pairwise.R
